Fix template for 3.2

--- a/config/services.yml
+++ b/config/services.yml
@@ -14,5 +14,6 @@ services:
         arguments:
             - @template
             - @controller.helper
+            - @config
         tags:
             - { name: event.listener }
