--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"extra": {
 		"display-name": "Notes",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0"
+			"phpbb/phpbb": ">=3.1.0,<3.3"
 		}
 	}
 }
